Bug 210719 M17rc1 Trunk [@ nsTreeBodyFrame::ScrollCallback] - Bookmark Manager persistently scrolls up/down if a bookmark is dragged into the 'scroll up'/'scroll down' area just above/below the bookmarks, and dropped there patch by mailto:durbacher@gmx.de r=varga sr=shaver